kubernetes-old/registry/registry/deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        volumeMounts:
        - name: image-store
          mountPath: /var/lib/registry
        - name: auth-passwd
          mountPath: /auth
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
      volumes:
      - name: image-store
        hostPath:
          path: /root/registry/images
      - name: auth-passwd
        secret:
          secretName: basic-auth-registry
      nodeSelector:
        name: k8s-master-1
