kubernetes-old/registry/registry/ingress-steve.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: registry-steve
  namespace: registry
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - registry.app.satreix.fr
    secretName: registry-tls-steve
  rules:
  - host: registry.app.satreix.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
